<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Bluebit</string>
	<string name="connect">Connect</string>
	<string name="target">Target</string>
	<string name="on">On</string>
	<string name="off">Off</string>
	<string name="send">Send</string>
	<string name="scan">Scan</string>
	<string name="start">Start</string>
	<string name="more">More</string>
	<string name="choose_file">Choose File</string>
	<string name="stop_scan">Stop Scan</string>
	<string name="scanning">Scanning</string>
	<string name="discovering">Discovering</string>
	<string name="connecting">Connecting</string>
	<string name="disconnected">Disconnected</string>
	<string name="running_automation">Running Auto Pattern</string>
	<string name="automation">Auto Pattern</string>
	<string name="empty_list">This list is empty</string>
	<string name="empty_function">There is no corresponding function for this Device</string>
	<string name="red">Red</string>
	<string name="green">Green</string>
	<string name="blue">Blue</string>

	<string name="device_menu_title">Bluetooth Device</string>
	<string name="device_menu_choose">Choose this device</string>
	<string name="device_menu_detail">Detail information</string>
	<string name="device_menu_server">Connect as a server</string>
	<string name="device_menu_rm_bond">Remove Bond</string>

	<string name="detail_name">Name</string>
	<string name="detail_addr">Address</string>
	<string name="detail_uuids">Uuids</string>
	<string name="detail_device_class">Device Class</string>

	<string name="device_class_audiovideo">Audio Video</string>
	<string name="device_class_computer">Computer</string>
	<string name="device_class_health">Health</string>
	<string name="device_class_imaging">Imaging</string>
	<string name="device_class_misc">Miscellaneous</string>
	<string name="device_class_networking">Networking</string>
	<string name="device_class_peripheral">Peripheral</string>
	<string name="device_class_phone">Phone</string>
	<string name="device_class_toy">Toy</string>
	<string name="device_class_uncategorized">Uncategorized</string>
	<string name="device_class_wearable">Wearable</string>

	<string name="main_client_title">Client</string>
	<string name="main_client_desc">To be a Gatt client and scan server devices around you</string>
	<string name="main_server_title">Server</string>
	<string name="main_server_desc">To be a GATT server and connect to a client device</string>
	<string name="main_weight_title">Weight Scale</string>
	<string name="main_weight_desc">Get data from your weight scale</string>

	<string name="aio_ctrl_1">LED 1</string>
	<string name="aio_ctrl_2">LED 2</string>
	<string name="aio_ctrl_3">LED 3</string>
	<string name="aio_ctrl_4">LED 4</string>
	<string name="aio_ctrl_5">LED 5</string>
	<string name="aio_ctrl_6">LED 6</string>
	<string name="aio_ctrl_7">LED 7</string>

	<string name="func_light">Control the light</string>
	<string name="func_light_desc">Control the light via Bluetooth connection</string>

	<string name="title_srv">Service</string>
	<string name="title_chr">Characteristic</string>
	<string name="title_dsc">Descriptor</string>

	<string name="rcv_desc">Receive file from remote if enabled</string>
	<string name="rcv_btn">Toggle</string>
	<string name="rcv_state">Enabled</string>
	<string name="compare_file">Choose a file to compare</string>
	<string name="timer_delta">Delta time(ms)</string>
	<string name="timer_size">Pattern Size(less than 20)</string>
	<string name="timer_repeat">Repeat(0: unlimited)</string>
	<string name="echo_title">Set Echo</string>
	<string name="echo_desc">To transfer data back automatically</string>
	<string name="with_response">Write with Response</string>
</resources>
