<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="@android:style/ButtonBar"
			android:visibility="gone"
			>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/target"
				style="style/detail_key"
				/>
			<TextView
				android:id="@+id/aio_target_device"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				style="style/detail_value"
				/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="?android:attr/listPreferredItemHeight"
			android:gravity="center_vertical"
			>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/aio_ctrl_1"
				android:layout_marginLeft="@dimen/large_gutter"
				style="@style/row_text"
				/>
			<ToggleButton
				android:id="@+id/aio_ctrl_1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textOn="@string/on"
				android:textOff="@string/off"
				android:layout_marginRight="@dimen/large_gutter"
				android:onClick="onToggleClicked"
				/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="?android:attr/listPreferredItemHeight"
			android:gravity="center_vertical"
			android:background="@drawable/row_even_background"
			>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/aio_ctrl_2"
				android:layout_marginLeft="@dimen/large_gutter"
				style="@style/row_text"
				/>
			<ToggleButton
				android:id="@+id/aio_ctrl_2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textOn="@string/on"
				android:textOff="@string/off"
				android:layout_marginRight="@dimen/large_gutter"
				android:onClick="onToggleClicked"
				/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="?android:attr/listPreferredItemHeight"
			android:gravity="center_vertical"
			>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/aio_ctrl_3"
				android:layout_marginLeft="@dimen/large_gutter"
				style="@style/row_text"
				/>
			<ToggleButton
				android:id="@+id/aio_ctrl_3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textOn="@string/on"
				android:textOff="@string/off"
				android:layout_marginRight="@dimen/large_gutter"
				android:onClick="onToggleClicked"
				/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="?android:attr/listPreferredItemHeight"
			android:gravity="center_vertical"
			android:background="@drawable/row_even_background"
			>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/aio_ctrl_4"
				android:layout_marginLeft="@dimen/large_gutter"
				style="@style/row_text"
				/>
			<ToggleButton
				android:id="@+id/aio_ctrl_4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textOn="@string/on"
				android:textOff="@string/off"
				android:layout_marginRight="@dimen/large_gutter"
				android:onClick="onToggleClicked"
				/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="?android:attr/listPreferredItemHeight"
			android:gravity="center_vertical"
			>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/aio_ctrl_5"
				android:layout_marginLeft="@dimen/large_gutter"
				style="@style/row_text"
				/>
			<ToggleButton
				android:id="@+id/aio_ctrl_5"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textOn="@string/on"
				android:textOff="@string/off"
				android:layout_marginRight="@dimen/large_gutter"
				android:onClick="onToggleClicked"
				/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="?android:attr/listPreferredItemHeight"
			android:gravity="center_vertical"
			android:background="@drawable/row_even_background"
			>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/aio_ctrl_6"
				android:layout_marginLeft="@dimen/large_gutter"
				style="@style/row_text"
				/>
			<ToggleButton
				android:id="@+id/aio_ctrl_6"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textOn="@string/on"
				android:textOff="@string/off"
				android:layout_marginRight="@dimen/large_gutter"
				android:onClick="onToggleClicked"
				/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="?android:attr/listPreferredItemHeight"
			android:gravity="center_vertical"
			>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/aio_ctrl_7"
				android:layout_marginLeft="@dimen/large_gutter"
				style="@style/row_text"
				/>
			<ToggleButton
				android:id="@+id/aio_ctrl_7"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textOn="@string/on"
				android:textOff="@string/off"
				android:layout_marginRight="@dimen/large_gutter"
				android:onClick="onToggleClicked"
				/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="?android:attr/listPreferredItemHeight"
			android:background="@color/transparent_red"
			android:gravity="center_vertical"
			>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="3"
				android:text="@string/red"
				android:layout_marginLeft="@dimen/large_gutter"
				style="@style/row_text"
				/>
			<SeekBar
				android:id="@+id/aio_seekbar_r"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginRight="@dimen/large_gutter"
				android:max="@integer/seekbar_max"
				android:progress="@integer/seekbar_progress"
				android:layout_weight="1"
				/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="?android:attr/listPreferredItemHeight"
			android:background="@color/transparent_green"
			android:gravity="center_vertical"
			>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="3"
				android:text="@string/green"
				android:layout_marginLeft="@dimen/large_gutter"
				style="@style/row_text"
				/>
			<SeekBar
				android:id="@+id/aio_seekbar_g"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginRight="@dimen/large_gutter"
				android:max="@integer/seekbar_max"
				android:progress="@integer/seekbar_progress"
				android:layout_weight="1"
				/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="?android:attr/listPreferredItemHeight"
			android:background="@color/transparent_blue"
			android:gravity="center_vertical"
			>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="3"
				android:text="@string/blue"
				android:layout_marginLeft="@dimen/large_gutter"
				style="@style/row_text"
				/>
			<SeekBar
				android:id="@+id/aio_seekbar_b"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginRight="@dimen/large_gutter"
				android:max="@integer/seekbar_max"
				android:progress="@integer/seekbar_progress"
				android:layout_weight="1"
				/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="@android:style/ButtonBar"
			>
			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="Auto Pattern 1"
				android:layout_weight="1"
				android:onClick="onClickAutoPattern1"
				/>
			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="Auto Pattern 2"
				android:layout_weight="1"
				android:onClick="onClickAutoPattern2"
				/>
			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="Auto Color"
				android:layout_weight="1"
				android:onClick="onClickAutoPattern3"
				/>
		</LinearLayout>

	</LinearLayout>
</ScrollView>
